# SP

./: .bashrc  .gitignore
Basics/: .gitignore  CMakeLists.txt  README.md  measure.hpp  measure_test.cpp  passing.cpp  passing.hpp  passing_bm.cpp  swap.cpp  swap.hpp  swap_bm.cpp  swap_main.cpp  testing_array.cpp  testing_vector.cpp  types.cpp
Concurrency/: .clang-tidy  CMakeLists.txt  README.md  benchmark.cmake  fischer.xml
Concurrency/include/: mtqueue.hpp
Concurrency/src/: CMakeLists.txt  digits_bm.cpp  fischer.cpp  futures.cpp  mtqueue.cpp
Concurrency/tests/: CMakeLists.txt  mtqueue_bm.cpp  stringsort0_bm.cpp  stringsort1_bm.cpp  stringsort2_bm.cpp  stringsort3_bm.cpp  stringsort4_bm.cpp
Coroutines/: .clang-tidy  CMakeLists.txt  README.md
Coroutines/cmake/: corosio.cmake  doctest.cmake  libcoro.cmake
Coroutines/include/: collatz.hpp  coroutines.hpp  fibonacci.hpp  generator.hpp
Coroutines/source/: CMakeLists.txt  collatz.cpp  coroutines.cpp  fibonacci.cpp  generator.cpp
Coroutines/tests/: CMakeLists.txt  collatz_test.cpp  corosio_test.cpp  coroutines_test.cpp  fibonacci_test.cpp  generator_test.cpp
Functor/: .gitignore  CMakeLists.txt  README.md
Functor/include/: fmap_optional.hpp  fmap_vector.hpp  function_traits.hpp  functions.hpp
Functor/tests/: CMakeLists.txt  fmap_optional_test.cpp  fmap_vector_test.cpp  function_traits_test.cpp
Lambdas/: CMakeLists.txt  README.md  benchmark.cmake
Lambdas/src/: CMakeLists.txt  abc.hpp  abc_csv.cpp  abc_csv.hpp  abc_csv_test.cpp  lambda-puzzle1.cpp  lambda-puzzle2.cpp  lambda-puzzle3.cpp  lambda_api.cpp  lambda_api_bench.cpp  storage.h
Miniproject/: .gitignore  CMakeLists.txt  Readme.md  benchmark.cmake  parallel_bm.json
Miniproject/cmake/: doctest.cmake
Miniproject/examples/: circadian.cpp  circadian_plot.cpp  figure1.cpp  figure1_plot.cpp  networks.hpp  seihr.cpp  seihr_plot.cpp
Miniproject/figures/: circadian.dot  figure1.dot  seihr.dot
Miniproject/include/: generator.hpp  parallel.hpp  partial_reaction.hpp  plot.hpp  printer.hpp  rated_reactants.hpp  reactant.hpp  reactant_list.hpp  reaction.hpp  simulator.hpp  symbol_table.hpp  thread-pool.hpp  vessel.hpp  visitor.hpp
Miniproject/source/: partial_reaction.cpp  plot.cpp  printer.cpp  rated_reactants.cpp  reactant_list.cpp  reaction.cpp  simulator.cpp  vessel.cpp
Miniproject/tests/: CMakeLists.txt  parallel_bm.cpp  test_dsl.cpp  test_printer.cpp  test_simulator.cpp  test_symbol_table.cpp
NumberSeries/: CMakeLists.txt  README.md
NumberSeries/cmake/: benchmark.cmake  doctest.cmake  gtest.cmake  sanitizers.cmake
NumberSeries/include/: number_series.hpp
NumberSeries/source/: CMakeLists.txt  number_series.cpp
NumberSeries/tests/: CMakeLists.txt  main.cpp  number_series_bm.cpp  number_series_test.cpp
PolylineCoW/: .gitignore  CMakeLists.txt  README.md
PolylineCoW/include/polyline/: point.hpp  polyline.hpp  polyline2.hpp
PolylineCoW/source/: CMakeLists.txt
PolylineCoW/tests/: CMakeLists.txt  polyline2_test.cpp  polyline_test.cpp
Stack/: .clang-format  .gitignore  CMakeLists.txt  README.md  stack.cpp  stack.hpp  stack_test.cpp
StaticVisitor/: .clang-tidy  CMakeLists.txt  README.md
StaticVisitor/include/: json_input.hpp  json_output.hpp  meta.hpp
StaticVisitor/src/: data.hpp  json_input_test.cpp  json_output_test.cpp  meta_test.cpp
Templates/: CMakeLists.txt  boost.cmake  doctest.cmake
Templates/include/: fibonacci.hpp  measure.hpp  minmax.hpp  power.hpp
Templates/src/: CMakeLists.txt  fibonacci_test.cpp  kindof_test.cpp  minmax_bm.cpp  minmax_test.cpp  power_bm.cpp  power_test.cpp  random.cpp  type_name_test.cpp
Variadics/: README.md  boost.cmake
Variadics/include/: factorial.hpp  random.hpp
Variadics/src/: CMakeLists.txt  factorial_bm.cpp  factorial_test.cpp  fibonacci_test.cpp  kindof_test.cpp  minmax.cpp  power_test.cpp  type_name_boost.cpp  type_name_test.cpp  variadic.cpp
calculator/: CMakeLists.txt  README.md  assign.cpp  assign.hpp  binary.cpp  binary.hpp  calculator.hpp  calculator_test.cpp  const.cpp  const.hpp  evaluator.cpp  evaluator.hpp  expr.cpp  expr.hpp  op.hpp  printer.cpp  printer.hpp  symbol_table.cpp  symbol_table.hpp  term.cpp  term.hpp  unary.cpp  unary.hpp  var.cpp  var.hpp  visitor.cpp  visitor.hpp
devtest/: CMakeLists.txt  CMakeSettings.json  hello-cpp23.cpp  main.cpp
lecture3/: CMakeLists.txt  exc3.2.cpp  exc3.3.cpp  exc3.4.cpp  lambda.cpp  spy.cpp  spy.hpp
lecture5/: CMakeLists.txt  base.cpp
lecture7/: CMakeLists.txt  main.cpp
lecture9/: CMakeLists.txt  README.md
lecture9/include/: meta.hpp
lecture9/src/: CMakeLists.txt  sum.cpp
testing/: CMakeLists.txt
